--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "API_ID": ,
-    "API_HASH": "",
+    "API_HASH": "6115488596:AAEi9vwxezT-isRJcpx9zZufvuPJSPTEYuE",
     "STRING_SESSION": "",
-    "CHANNEL_ID": [],
+    "CHANNEL_ID": [-1001386622368],
     "COMMENT_TEXT": ["1st", "First", "I'm first"],
     "LANGUAGE": "ENGLISH",
     "AVAILABLE_LANGUAGES": ["ENGLISH"]
